# academy-platform

./: .gitignore  Makefile  README.md  SECURITY_TODO.md  build.sh  deployment_report.md  pyproject.toml  render.yaml  requirements.txt  security_and_logic_improvements_report.md
blog/: admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py  0003_blogcategory_description_ar_and_more.py
config/: middleware.py  settings.py  urls.py
config/backends/: brevo_backend.py
config/config/: middleware.py
courses/: admin.py  apps.py  forms.py  htmx_views.py  models.py  tests.py  translation.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py  0003_category_description_ar_category_description_en_and_more.py  0004_lesson_is_published.py
payments/: admin.py  apps.py  models.py  tests.py  urls.py  urls_webhook.py  views.py
payments/migrations/: 0001_initial.py  0002_initial.py
static/css/: custom.css
static/js/: enhancements.js
templates/: base.html
templates/account/: email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/blog/: category.html  post_detail.html  post_list.html
templates/courses/: add_review.html  category.html  course_detail.html  course_list.html  course_list_htmx.html  home.html  lesson.html  (+1 more)
users/: adapter.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
(+35 files in other folders)
