[project]
name = "academy-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "dj-config-url>=0.1.1",
    "dj-database-url>=2.3.0",
    "django>=6.0.1",
    "django-allauth>=65.14.0",
    "django-cors-headers>=4.9.0",
    "django-crispy-forms>=2.5",
    "django-environ>=0.12.0",
    "django-htmx>=1.27.0",
    "django-modeltranslation>=0.19.19",
    "django-tinymce>=5.0.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=24.1.1",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.1",
    "stripe>=14.3.0",
    "whitenoise>=6.11.0",

]
